report container profile fixed padding, added overflow scroll to graphs

--- a/src/components/Reports/PeopleTableDetails.css
+++ b/src/components/Reports/PeopleTableDetails.css
@@ -23,7 +23,8 @@
   border-bottom: 3px solid #f8f7f8;
 
   @media screen and (max-width: 550px) {
-    display: block;
+    display: flex;
+    overflow: scroll;
   }
 }
 
