--- a/src/components/Reports/reportsPage.css
+++ b/src/components/Reports/reportsPage.css
@@ -138,5 +138,6 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    overflow: scroll;
   }
 }
