--- a/src/components/Reports/sharedComponents/ReportPage/ReportPage.css
+++ b/src/components/Reports/sharedComponents/ReportPage/ReportPage.css
@@ -33,7 +33,7 @@
 }
 
 .report-page-profile {
-  padding: 24px 24px 0 24px;
+  padding: 24px;
   background-color: #f1ebf7;
   border-top-left-radius: 25px;
 
@@ -48,7 +48,7 @@
 
   @media screen and (max-width: 1250px) {
     width: 400px;
-    height: 310px;
+    height: fit-content;
     border-radius: 25px;
   }
 }
